<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/lv_design">

    <ImageView
        android:id="@+id/gaitanaru_teodora_iv_picture_center"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:contentDescription="@string/hospital"
        android:src="@drawable/hospital"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gaitanaru_teodora_tv_row_centru_denumire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/arima_madurai_bold"
        android:text="@string/denumire_centru"
        android:textAllCaps="false"
        android:textColor="@color/light_pink"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/gaitanaru_teodora_iv_picture_center"/>
    <TextView
        android:id="@+id/gaitanaru_teodora_tv_row_centru_judet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/arima_madurai_bold"
        android:textColor="@color/light_pink"
        android:text="@string/judet_centru"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/gaitanaru_teodora_iv_picture_center"
        app:layout_constraintTop_toBottomOf="@id/gaitanaru_teodora_tv_row_centru_denumire"/>

    <TextView
        android:id="@+id/gaitanaru_teodora_tv_row_centru_adresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/light_pink"
        android:text="@string/adresa_centru"
        android:textAllCaps="false"
        android:fontFamily="@font/arima_madurai_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/gaitanaru_teodora_iv_picture_center"
        app:layout_constraintTop_toBottomOf="@id/gaitanaru_teodora_tv_row_centru_judet"
        />

    <TextView
        android:id="@+id/gaitanaru_teodora_tv_row_centru_telefon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/light_pink"
        android:text="@string/telefon_centru"
        android:textAllCaps="false"
        android:fontFamily="@font/arima_madurai_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/gaitanaru_teodora_iv_picture_center"
        app:layout_constraintTop_toBottomOf="@id/gaitanaru_teodora_tv_row_centru_adresa"
        />
</androidx.constraintlayout.widget.ConstraintLayout>